# netrc-rs

./: .gitignore  Cargo.toml  README.md  index.html
doc/: search-index.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Debug.js
doc/netrc/: enum.Error.html  index.html  sidebar-items.js  struct.Machine.html  struct.Netrc.html  type.Host.html  type.Macro.html  type.Result.html
doc/src/netrc/: lib.rs.html
src/: errors.rs  lib.rs
